new updated UI, logo, home page, Projects updated

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/css?family=Erica+One|Montserrat&display=swap" rel="stylesheet">
-  <title>Brian Chu</title>
-</head>
-
-<body style="margin: 0;">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Rubik|Oxygen|Roboto|Montserrat|Roboto+Mono|VT323&display=swap" rel="stylesheet"><body style="margin: 0;">
   <div id="container"></div>
 </body>
 
